<resources>
    <string name="FBT">묶음추가</string>
    <string name="FBT_comma">묶음상품:</string>
    <string name="FBT_placeholder">묶음상품이름, 상품이름, 재고식별자, 상품번호</string>
    <string name="FBT_products">묶음에 포함된 상품들</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_refund_return">상품교환 및 퇴송에 대하여</string>
    <string name="above">이상</string>
    <string name="accept">접수</string>
    <string name="accept_order">주문접수</string>
    <string name="accepted">접수됨</string>
    <string name="accepted_at">접수시간</string>
    <string name="accepted_at_comma">접수시간:</string>
    <string name="accepted_refund_order_note" formatted="false">%s에서 %s번 %s요청(%s번 상품 %s개)을 접수하였습니다.</string>
    <string name="account">나의 정보</string>
    <string name="account_merge">계정통합</string>
    <string name="account_merge_notice">국가망식별자와 계정통합이 이루어지면 국가망과 이동망계정의 모든 정보가 합쳐지게 됩니다.</string>
    <string name="action_cancel">취소</string>
    <string name="action_cancel_order">주문취소</string>
    <string name="action_change">변경</string>
    <string name="action_delete">삭제</string>
    <string name="action_delete_order">리력삭제</string>
    <string name="action_edit_address">송달정보편집</string>
    <string name="action_edit_order">주문편집</string>
    <string name="action_format">변경초기화</string>
    <string name="action_install">설치</string>
    <string name="action_login">가입</string>
    <string name="action_logout">가입탈퇴되였습니다.</string>
    <string name="action_next">다음</string>
    <string name="action_ok">확인</string>
    <string name="action_order_detail">주문상세</string>
    <string name="action_prev">이전</string>
    <string name="action_register">등록</string>
    <string name="action_save">보관</string>
    <string name="action_update">갱신</string>
    <string name="add">추가</string>
    <string name="add_FBT">묶음상품추가</string>
    <string name="add_cart">바구니담기</string>
    <string name="add_deliverer">송달원추가</string>
    <string name="add_faq_notice">물음과 대답은 상품페지에 상품사용에서 제기될수 있는 문제들에 대한 대답들을 함께 현시하여 손님들이 상품에 대하여 더 쉽게 파악하게 해줍니다.\n경영정보설정페지에서 설정한 물음과 대답들이 자동적으로 상품들에 추가됩니다.\n추가된 문답은 설정된 이후 추가되는 상품들에 반영되게 되며 이전의 상품들에는 반영되지 않습니다.</string>
    <string name="add_new_address">새 주소추가</string>
    <string name="add_new_deliverer_register_notice">송달원을 새로 등록하겠습니까?</string>
    <string name="add_new_faq">새 문답추가</string>
    <string name="add_point_placeholder">기업체평가글을 남겨주십시오.</string>
    <string name="add_product">상품추가</string>
    <string name="add_product_comma">추가할 상품:</string>
    <string name="add_reply">응답글남기기</string>
    <string name="add_review_placeholder">상품평가글을 남겨주십시오.</string>
    <string name="add_sale_product">특별인하상품추가</string>
    <string name="add_sale_product_description" formatted="false">특별인하봉사중에 있는 상품들은 인하률을 감소시킬수 없으며 인하률은 최소 3%, 최대 80%로 설정할수 있습니다.</string>
    <string name="add_sale_product_notice">인하봉사를 적용할 상품들을 선택하십시오.</string>
    <string name="add_sale_product_placeholder">상품번호나 이름을 입력하십시오.</string>
    <string name="add_shipping_time">송달시간추가</string>
    <string name="add_shipping_zone">송달지역추가</string>
    <string name="add_staff">종업원추가</string>
    <string name="add_staff_warning_notice">기업체종업원으로는 이미 백화점에 가입한 사용자들만 추가할수 있습니다.</string>
    <string name="add_ticket">의견글 추가</string>
    <string name="add_to_cart">바구니에 모두 추가</string>
    <string name="added_to_cart">바구니에 추가되였습니다.</string>
    <string name="address">주소</string>
    <string name="address_comma">주소:</string>
    <string name="address_manage">송달주소관리</string>
    <string name="addresses">주소관리</string>
    <string name="addresses_list">송달목록</string>
    <string name="admin_page">관리페지</string>
    <string name="advanced_info">고급정보</string>
    <string name="after_arrive_product">상품도착후</string>
    <string name="agency_connection">대리판매관련:</string>
    <string name="agree">동의</string>
    <string name="agree_notice">동의한 내용을 표식해주십시오.</string>
    <string name="all">전체</string>
    <string name="all_category_name">전체 상품종류</string>
    <string name="all_orders_count_comma">전체 주문개수:</string>
    <string name="all_product_type">전체 상품형태</string>
    <string name="all_products">전체 상품</string>
    <string name="all_review_rates">전체 평가점수</string>
    <string name="all_role">전체 사용자권한</string>
    <string name="alma_mater">어느 학교를 졸업했습니까?</string>
    <string name="already_download">이미 내리적재되였습니다. 설치하겠습니까?</string>
    <string name="already_existed_deliverer_warning_notice">그 송달원은 이미 추가되였습니다.</string>
    <string name="already_merged">통합된 식별자로는 계정통합요청을 다시 날릴수 없습니다.</string>
    <string name="already_sale_failed_products">이미 인하목록에 추가되여있습니다.</string>
    <string name="already_selected_question">이미 선택된 질문입니다.</string>
    <string name="analytics">분석통계</string>
    <string name="analytics_brand">분석통계 / 상표</string>
    <string name="analytics_category">분석통계 / 상품종류</string>
    <string name="analytics_customer">분석통계 / 손님</string>
    <string name="analytics_order">분석통계 / 주문</string>
    <string name="analytics_overview">분석자료 개요</string>
    <string name="analytics_product">분석통계 / 상품</string>
    <string name="analytics_profit">분석통계 / 수익금</string>
    <string name="analytics_stock">분석통계 / 재고</string>
    <string name="and_count_types">외 %d가지 상품</string>
    <string name="answer_faq">질문대답</string>
    <string name="answer_short">답</string>
    <string name="answer_short_comma">답:</string>
    <string name="apk">손전화열람기</string>
    <string name="app_folder_name">제일</string>
    <string name="app_name">제일전자백화점</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approved">승인됨</string>
    <string name="approvedAt_asc">등록올리순</string>
    <string name="approvedAt_desc">등록내리순</string>
    <string name="auto_download_failed">내리적재가 실패하였습니다. 통합정보봉사프로그람 《나의 길동무》에서 새 판본을 내리적재받아 다시 설치해주십시오.</string>
    <string name="auto_install_failed">자동설치가 실패하였습니다. 화일관리 《제일》등록부에 새 판본이 내리적재되였습니다. 갱신판본으로 설치하십시오.</string>
    <string name="auto_login">자동가입</string>
    <string name="avg_delivery_point_comma">평균 송달점수:</string>
    <string name="avg_order_products">평균 주문상품수</string>
    <string name="avg_order_total">평균 주문금액</string>
    <string name="avg_order_total_comma">평균 주문금액:</string>
    <string name="avg_orders_count">평균 주문개수</string>
    <string name="avg_orders_count_comma">평균 주문개수:</string>
    <string name="avg_review_product_comma">평균 상품평가점수:</string>
    <string name="avg_service_point_comma">평균 봉사점수:</string>
    <string name="avg_support_point_comma">평균 상품설명점수:</string>
    <string name="back_order">재고가 없는 경우 최단기일에 상품을 확보하여 주문을 완성하여드립니다.</string>
    <string name="ban">판매금지됨</string>
    <string name="ban_staff">금지됨</string>
    <string name="below">이하</string>
    <string name="big_font_size">크게</string>
    <string name="birthday">생년월일</string>
    <string name="birthday_comma">생년월일:</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bought_products">함께 사는 상품</string>
    <string name="brand">상표</string>
    <string name="brand_list">상표목록</string>
    <string name="business_info">경영정보</string>
    <string name="buy_now">즉시 구입</string>
    <string name="can_review_to_order">상품을 구입한 후 주문상세페지에서 평가글을 남길수 있습니다.</string>
    <string name="cancel">취소</string>
    <string name="cancel_all">모든 상품 취소</string>
    <string name="cancel_detail">특정상품취소</string>
    <string name="cancel_item_list">취소상품목록</string>
    <string name="cancel_item_order_note" formatted="false">%s에서 %s번 상품 %s개를 취소하였습니다.</string>
    <string name="cancel_list">취소목록</string>
    <string name="cancel_order">주문취소</string>
    <string name="cancel_order_description">주문을 취소시키는 경우 취소상품에 대하여 지불받은 전액을 손님에게 도로 반환해야 합니다. 또한 기업체의 평가점수에 영향을 미치게 됩니다.</string>
    <string name="cancel_order_label">취소된 주문</string>
    <string name="cancel_order_tooltip">선택된 날자구간에서 전체 취소,\n부분취소된 주문들을 나타냅니다.</string>
    <string name="cancel_order_warning_notice">주문을 취소하려고 합니까?</string>
    <string name="cancel_reason">취소리유:</string>
    <string name="cancel_refund_price">반환 및 취소금액:</string>
    <string name="cancel_refund_request">이 상품에 대한 반환요청을 정말 취소하겠습니까?</string>
    <string name="cancel_request">요청취소</string>
    <string name="cancel_short_label">취소</string>
    <string name="cancel_total">취소금액</string>
    <string name="cancel_total_comma">취소금액:</string>
    <string name="cancel_type">취소형태</string>
    <string name="cancelled">취소됨</string>
    <string name="cancelled_at">주문취소시간</string>
    <string name="cancelled_at_comma">주문취소시간:</string>
    <string name="cancelled_count_comma">취소개수:</string>
    <string name="cancelled_orders_count_comma">취소된 주문개수:</string>
    <string name="cancelled_refund_by_customer_order_note" formatted="false">손님이 %s번 %s요청(%s번 상품 %s개)을 취소하였습니다.</string>
    <string name="cancelled_refund_order_note" formatted="false">%s에서 %s번 %s요청(%s번 상품 %s개)을 취소하였습니다.</string>
    <string name="cannot_add_review">평가글추가가 실패하였습니다.</string>
    <string name="cannot_add_to_cart">재고량이상으로 추가할수 없습니다.</string>
    <string name="connect_info_comma">련계인:</string>
    <string name="default_address">기본주소로 선택</string>
    <string name="hint_location">김만유병원가까이</string>
    <string name="hint_select_address1">주소선택</string>
    <string name="hint_select_address2">20반 2층 2호</string>
    <string name="meta_address">대표적건물:</string>
    <string name="name_comma">이름:</string>
    <string name="one_dot">1.</string>
    <string name="payment_agree_check">이상의 내용에 동의합니다.</string>
    <string name="payment_agree_desc">주문하려면 다음의 내용에 동의하여야 합니다.</string>
    <string name="payment_agree_one">주문한 상품의 도착시간이나 송달주소를 변경시키거나 주문접수시간이외에 주문하려는 경우 의견함으로 사전합의를 진행할수 있습니다.</string>
    <string name="payment_agree_three">주문한 상품을 여러가지 부당한 조건으로 하여 퇴송하거나 상품을 넘겨받은 즉시 주문상품의 절반이상을 퇴송하는 경우 퇴송비는 사용자가 부담하여야 합니다.</string>
    <string name="payment_agree_two">부당한 퇴송을 요구하거나 퇴송이 많은 경우 퇴송손님으로 등록되게 됩니다.</string>
    <string name="phone_number">전화번호:</string>
    <string name="phone_number1">전화번호 1:</string>
    <string name="phone_number2">전화번호 2:</string>
    <string name="shipping_address">송달주소:</string>
    <string name="three_dot">3.</string>
    <string name="two_dot">2.</string>
</resources>