<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_15sdp"
    android:paddingRight="@dimen/_15sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:theme="@style/Theme.AppCompat"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            app:srcCompat="@drawable/payment_agree"/>
        <com.jeil.emarket.components.textview.TextView
            android:textSize="@dimen/font_12"
            android:textColor="@color/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/payment_agree_desc"
            android:lineSpacingExtra="@dimen/_10sdp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:background="@drawable/bg_dotted_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layerType="software"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp">
        <com.jeil.emarket.components.textview.TextView
            android:textSize="@dimen/font_12"
            android:textColor="@color/body"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:text="@string/one_dot"
            android:lineSpacingExtra="@dimen/_10sdp"/>
        <com.jeil.emarket.components.textview.TextView
            android:textSize="@dimen/font_12"
            android:textColor="@color/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_agree_one"
            android:lineSpacingExtra="@dimen/_10sdp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp">
        <com.jeil.emarket.components.textview.TextView
            android:textSize="@dimen/font_12"
            android:textColor="@color/body"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:text="@string/two_dot"
            android:lineSpacingExtra="@dimen/_10sdp"/>
        <com.jeil.emarket.components.textview.TextView
            android:textSize="@dimen/font_12"
            android:textColor="@color/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_agree_two"
            android:lineSpacingExtra="@dimen/_10sdp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp">
        <com.jeil.emarket.components.textview.TextView
            android:textSize="@dimen/font_12"
            android:textColor="@color/body"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:text="@string/three_dot"
            android:lineSpacingExtra="@dimen/_10sdp"/>
        <com.jeil.emarket.components.textview.TextView
            android:textSize="@dimen/font_12"
            android:textColor="@color/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_agree_three"
            android:lineSpacingExtra="@dimen/_10sdp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:background="@drawable/bg_dotted_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layerType="software"/>
    <com.jeil.emarket.components.checkbox.CheckBox
        android:textSize="@dimen/font_12"
        android:textColor="@color/body"
        android:gravity="center_vertical"
        android:id="@+id/cb_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/payment_agree_check"
        android:paddingStart="@dimen/_3sdp"
        android:layout_marginStart="-4dp"
        style="@style/CustomCheckBox"/>
    <com.jeil.emarket.components.button.CustomButton
        android:textSize="@dimen/font_12"
        android:textColor="@color/white"
        android:id="@+id/cb_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/agree"
        app:b_color="@color/dark"
        app:b_corner_radius="@dimen/_30sdp"/>
</androidx.appcompat.widget.LinearLayoutCompat>
