<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="@dimen/_20sdp"
    android:paddingTop="@dimen/_26sdp"
    android:paddingRight="@dimen/_20sdp"
    android:paddingBottom="@dimen/_20sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.jeil.emarket.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_comma"
            android:layout_marginStart="-1dp"
            style="@style/address_modal_item"/>
        <com.jeil.emarket.components.edittext.EditText
            android:textColorHint="@color/light"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            style="@style/address_modal"/>
        <com.jeil.emarket.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/address_comma"
            android:layout_marginStart="-1dp"
            style="@style/address_modal_item"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp">
            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RippleStyleDark">
                <com.jeil.emarket.components.textview.TextView
                    android:textColorHint="@color/light"
                    android:id="@+id/tv_address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_select_address1"
                    style="@style/address_modal"/>
            </com.balysv.materialripple.MaterialRippleLayout>
            <androidx.appcompat.widget.AppCompatImageView
                android:theme="@style/Theme.AppCompat"
                android:layout_gravity="end|center_vertical"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:tint="@color/body"
                android:layout_marginEnd="@dimen/_14sdp"
                app:srcCompat="@drawable/ic_angle_down"/>
        </FrameLayout>
        <com.jeil.emarket.components.edittext.EditText
            android:textColorHint="@color/light"
            android:id="@+id/et_address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/hint_select_address2"
            style="@style/address_modal"/>
        <com.jeil.emarket.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/meta_address"
            android:layout_marginStart="-1dp"
            style="@style/address_modal_item"/>
        <com.jeil.emarket.components.edittext.EditText
            android:textColorHint="@color/light"
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:hint="@string/hint_location"
            android:lineSpacingExtra="@dimen/_6sdp"
            style="@style/address_modal"/>
        <com.jeil.emarket.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            style="@style/address_modal_item"/>
        <com.jeil.emarket.components.edittext.EditPhone
            android:textColorHint="@color/light"
            android:id="@+id/cep_phone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            app:ef_drawable_color="@color/body"
            app:ef_drawable_end="@drawable/ic_plus"
            app:ef_drawable_size="@dimen/_12sdp"
            app:ef_placeholder="191-333-3333"/>
        <com.jeil.emarket.components.edittext.EditPhone
            android:id="@+id/cep_phone2"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            app:ef_drawable_end="@drawable/ic_plus"
            app:ef_drawable_size="@dimen/_12sdp"
            app:ef_placeholder="191-333-3333"/>
        <com.jeil.emarket.components.checkbox.CheckBox
            android:textSize="@dimen/font_11_5"
            android:textColor="@color/body"
            android:gravity="center"
            android:id="@+id/cb_add_default_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:text="@string/default_address"
            android:layout_marginStart="-4dp"
            style="@style/CustomCheckBox"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:baselineAligned="false">
            <com.jeil.emarket.components.button.CustomButton
                android:id="@+id/tvCancelAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                android:stateListAnimator="@null"
                style="@style/btn_dialog_outline"/>
            <com.jeil.emarket.components.button.CustomButton
                android:id="@+id/tvOkAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_ok"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:stateListAnimator="@null"
                style="@style/btn_dialog_primary"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
