<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="@dimen/_20sdp"
    android:paddingTop="@dimen/_30sdp"
    android:paddingRight="@dimen/_20sdp"
    android:paddingBottom="@dimen/_18sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">
            <com.jeil.emarket.components.textview.TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:text="@string/connect_info_comma"
                style="@style/address_modal_item"/>
            <com.jeil.emarket.components.edittext.EditText
                android:textColorHint="@color/white_bg"
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/address_modal"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">
            <com.jeil.emarket.components.textview.TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:text="@string/shipping_address"
                style="@style/address_modal_item"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.balysv.materialripple.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/RippleStyleDark">
                        <com.jeil.emarket.components.textview.TextView
                            android:textColorHint="@color/white_bg"
                            android:id="@+id/tv_address1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_select_address1"
                            style="@style/address_modal"/>
                    </com.balysv.materialripple.MaterialRippleLayout>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:theme="@style/Theme.AppCompat"
                        android:layout_gravity="end|center_vertical"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:tint="@color/body"
                        android:layout_marginEnd="@dimen/_14sdp"
                        app:srcCompat="@drawable/ic_angle_down"/>
                </FrameLayout>
                <com.jeil.emarket.components.edittext.EditText
                    android:textColorHint="@color/white_bg"
                    android:id="@+id/et_address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/hint_select_address2"
                    style="@style/address_modal"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">
            <com.jeil.emarket.components.textview.TextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:text="@string/meta_address"
                style="@style/address_modal_item"/>
            <com.jeil.emarket.components.edittext.EditText
                android:textColorHint="@color/white_bg"
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location"
                android:singleLine="true"
                style="@style/address_modal"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">
            <com.jeil.emarket.components.textview.TextView
                android:textSize="@dimen/font_11_5"
                android:textColor="@color/light"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number1"/>
            <com.jeil.emarket.components.edittext.EditPhone
                android:id="@+id/cep_phone1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ef_placeholder="191-333-3333"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp">
            <com.jeil.emarket.components.textview.TextView
                android:textSize="@dimen/font_11_5"
                android:textColor="@color/light"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number2"/>
            <com.jeil.emarket.components.edittext.EditPhone
                android:id="@+id/cep_phone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ef_placeholder="191-333-3333"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <com.jeil.emarket.components.button.CustomButton
                android:id="@+id/cb_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                android:stateListAnimator="@null"
                style="@style/btn_dialog_outline"/>
            <com.jeil.emarket.components.button.CustomButton
                android:id="@+id/cb_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_ok"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:stateListAnimator="@null"
                style="@style/btn_dialog_primary"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
